# sphinx-no-pragma

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  changelog.txt  contributor_guidelines.txt  demo.txt  documentation.txt  index.txt  llms.txt  package.txt  pyproject.toml  security.txt  source_tree.txt  sphinx_no_pragma.py  sphinx_no_pragma.txt  tests.py  tox.ini
.agents/skills/coding-standards/: SKILL.md
.agents/skills/dev-setup/: SKILL.md
.agents/skills/dev-workflow/: SKILL.md
.agents/skills/pr-review/: SKILL.md
.agents/skills/update-documentation/: SKILL.md
.doctrees/: changelog.doctree  code_of_conduct.doctree  contributor_guidelines.doctree  demo.doctree  documentation.doctree  environment.pickle  index.doctree  llms.doctree  package.doctree  security.doctree  source_tree.doctree  sphinx_no_pragma.doctree
.github/workflows/: test.yml
docs/: conf.py  demo.rst  documentation.rst  llms.rst  requirements.txt  source_tree.rst  usage.rst
docs/_static/: example_1.py
examples/: example_1.py
scripts/: generate_project_source_tree.py
